[package]
name = "edr_optimism"
version = "0.3.5"
edition = "2021"

[dependencies]
alloy-eips = { version = "0.2", default-features = false }
alloy-rlp = { version = "0.3", default-features = false, features = ["derive"] }
alloy-serde = { version = "0.2.0", default-features = false, features = ["std"] }
edr_eth = { path = "../edr_eth", features = ["serde", "std"] }
edr_evm = { path = "../edr_evm" }
edr_provider = { path = "../edr_provider" }
edr_rpc_eth = { path = "../edr_rpc_eth" }
log = { version = "0.4.17", default-features = false }
revm = { git = "https://github.com/Wodann/revm", rev = "a500675", version = "12.1", default-features = false, features = ["c-kzg", "dev", "optimism", "serde", "std"] }
serde = { version = "1.0.209", default-features = false, features = ["derive", "std"] }
thiserror = { version = "1.0.37", default-features = false }
tokio = { version = "1.21.2", default-features = false, features = ["macros", "rt-multi-thread", "sync"] }

[dev-dependencies]
anyhow = "1.0.75"
edr_defaults = { path = "../edr_defaults" }
edr_evm = { path = "../edr_evm", features = ["test-utils"] }
edr_rpc_eth = { path = "../edr_rpc_eth", features = ["test-utils"] }
edr_test_utils = { path = "../edr_test_utils" }
parking_lot = { version = "0.12.1", default-features = false }
paste = { version = "1.0.14", default-features = false }
serde_json = { version = "1.0.127" }
serial_test = "2.0.0"
tokio = { version = "1.21.2", default-features = false, features = ["macros", "rt-multi-thread", "sync"] }

[features]
test-remote = []
