[package]
name = "edr_provider"
version.workspace = true
edition.workspace = true

[dependencies]
alloy-dyn-abi.workspace = true
alloy-sol-types.workspace = true
alloy-serde.workspace = true
anyhow = { workspace = true, optional = true }
auto_impl = { version = "1.2", default-features = false }
derive-where.workspace = true
dyn-clone = { version = "1.0.13", default-features = false }
edr_coverage = { path = "../edr_coverage" }
edr_defaults.workspace = true
edr_eth.workspace = true
edr_evm = { workspace = true, features = ["tracing"] }
edr_rpc_eth.workspace = true
edr_solidity.workspace = true
edr_test_utils = { workspace = true, optional = true }
edr_utils.workspace = true
indexmap = { version = "2.0.0", default-features = false, features = ["std"] }
itertools = { version = "0.12.0", default-features = false, features = ["use_alloc"] }
k256 = { version = "0.13.1", default-features = false, features = ["arithmetic", "ecdsa", "pem", "pkcs8", "precomputed-tables", "std"] }
lazy_static = { version = "1.4.0", default-features = false }
log = { version = "0.4.20", default-features = false }
lru = "0.12.2"
parking_lot = { version = "0.12.1", default-features = false }
rand = { version = "0.8.5", default-features = false }
revm-precompile.workspace = true
rpds = { version = "1.1.0", default-features = false, features = ["std"] }
serde.workspace = true
serde_json.workspace = true
sha3.workspace = true
thiserror.workspace = true
tokio = { version = "1.21.2", default-features = false, features = ["macros"] }
tracing = { version = "0.1.37", features = ["attributes", "std"], optional = true }

[dev-dependencies]
anyhow = "1.0.89"
edr_chain_l1 = { workspace = true, features = ["test-utils"] }
edr_evm = { path = "../edr_evm", features = ["test-utils"] }
edr_test_utils.workspace = true
paste = { version = "1.0.14", default-features = false }
serial_test = "2.0.0"
tempfile = "3.7.1"

[build-dependencies]
cargo_toml = { version = "0.15.3", default-features = false }
toml = { version = "0.5.9", default-features = false }

[features]
test-utils = ["dep:anyhow", "dep:edr_test_utils"]
tracing = ["dep:tracing", "edr_eth/tracing", "edr_evm/tracing"]
test-remote = ["dep:edr_test_utils"]

[lints]
workspace = true
