[package]
name = "edr_provider"
version.workspace = true
edition.workspace = true

[dependencies]
alloy-dyn-abi.workspace = true
alloy-eips.workspace = true
alloy-rlp.workspace = true
alloy-rpc-types.workspace = true
alloy-rpc-types-trace = "1.1.2"
alloy-serde.workspace = true
alloy-sol-types.workspace = true
anyhow = { workspace = true, optional = true }
auto_impl = { version = "1.2", default-features = false }
derive-where.workspace = true
derive_more = { workspace = true, features = ["debug"] }
dyn-clone.workspace = true
edr_block_api.workspace = true
edr_block_builder_api.workspace = true
edr_block_header.workspace = true
edr_block_miner.workspace = true
edr_blockchain_api.workspace = true
edr_blockchain_fork.workspace = true
edr_blockchain_local.workspace = true
edr_chain_config.workspace = true
edr_chain_l1.workspace = true
edr_chain_spec.workspace = true
edr_chain_spec_block.workspace = true
edr_chain_spec_evm.workspace = true
edr_chain_spec_provider.workspace = true
edr_chain_spec_receipt.workspace = true
edr_chain_spec_rpc.workspace = true
edr_coverage.workspace = true
edr_database_components.workspace = true
edr_defaults.workspace = true
edr_eip1559.workspace = true
edr_eip2930.workspace = true
edr_eip7702.workspace = true
edr_eip7892.workspace = true
edr_eth.workspace = true
edr_evm.workspace = true
edr_gas_report.workspace = true
edr_mem_pool.workspace = true
edr_precompile.workspace = true
edr_primitives.workspace = true
edr_receipt.workspace = true
edr_rpc_eth.workspace = true
edr_runtime.workspace = true
edr_signer.workspace = true
edr_solidity.workspace = true
edr_state_api.workspace = true
edr_test_utils = { workspace = true, optional = true }
edr_tracing.workspace = true
edr_transaction.workspace = true
edr_utils.workspace = true
foundry-evm-traces.workspace = true
indexmap = { version = "2.0.0", default-features = false, features = ["std"] }
itertools = { version = "0.12.0", default-features = false, features = [
    "use_alloc",
] }
k256 = { version = "0.13.1", default-features = false, features = [
    "arithmetic",
    "ecdsa",
    "pem",
    "pkcs8",
    "precomputed-tables",
    "std",
] }
lazy_static = { version = "1.4.0", default-features = false }
log = { version = "0.4.20", default-features = false }
lru = "0.12.2"
parking_lot.workspace = true
rand.workspace = true
revm-inspector.workspace = true
revm-inspectors.workspace = true
rpds = { version = "1.2.0", default-features = false, features = ["std"] }
serde.workspace = true
serde_json.workspace = true
sha3.workspace = true
thiserror.workspace = true
tokio = { version = "1.21.2", default-features = false, features = ["macros"] }
tracing = { version = "0.1.44", features = [
    "attributes",
    "std",
], optional = true }

[dev-dependencies]
alloy-eips.workspace = true
anyhow = "1.0.100"
edr_test_block_replay.workspace = true
edr_test_utils.workspace = true
paste = { version = "1.0.14", default-features = false }
serial_test = "2.0.0"
tempfile = "3.7.1"

[build-dependencies]
cargo_toml = { version = "0.22.3", default-features = false }
toml = { version = "0.9.5", default-features = false }

[features]
test-remote = ["dep:edr_test_utils"]
test-utils = ["dep:anyhow", "dep:edr_test_utils"]
tracing = [
    "dep:tracing",
    "edr_block_builder_api/tracing",
    "edr_block_miner/tracing",
    "edr_blockchain_api/tracing",
    "edr_blockchain_fork/tracing",
    "edr_blockchain_local/tracing",
    "edr_chain_l1/tracing",
    "edr_chain_spec_block/tracing",
    "edr_chain_spec_provider/tracing",
    "edr_database_components/tracing",
    "edr_evm/tracing",
    "edr_chain_spec_evm/tracing",
    "edr_gas_report/tracing",
    "edr_mem_pool/tracing",
    "edr_chain_spec_receipt/tracing",
    "edr_solidity/tracing",
]

[lints]
workspace = true
