[package]
name = "edr_rpc_client"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true, features = ["std"] }
edr_eth = { version = "0.3.5", path = "../edr_eth", features = ["serde"] }
futures = { version = "0.3.28", default-features = false, features = ["std"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
hyper = { version = "1.5.2", default-features = false }
lazy_static = { version = "1.4.0", default-features = false }
log = { version = "0.4.17", default-features = false }
regex = "1.10.0"
reqwest.workspace = true
reqwest-middleware.workspace = true
reqwest-retry.workspace = true
reqwest-tracing = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
sha3.workspace = true
thiserror.workspace = true
tokio = { version = "1.21.2", default-features = false, features = ["fs", "macros", "sync"] }
tracing = { version = "0.1.37", default-features = false, features = ["attributes", "std"], optional = true }
url = { version = "2.4.1", default-features = false }
uuid = { version = "1.4.1", default-features = false, features = ["std", "v4"] }

[dev-dependencies]
edr_test_utils = { version = "0.3.5", path = "../edr_test_utils" }
tempfile = { version = "3.7.1", default-features = false }
walkdir = { version = "2.3.3", default-features = false }

[features]
test-remote = []
tracing = ["dep:tracing", "dep:reqwest-tracing"]

[lints]
workspace = true
