[package]
name = "edr_rpc_client"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true, features = ["std"] }
edr_eth = { workspace = true, features = ["serde"] }
edr_primitives.workspace = true
futures = { version = "0.3.28", default-features = false, features = ["std"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
hyper = { version = "1.6.0", default-features = false }
lazy_static = { version = "1.4.0", default-features = false }
log = { version = "0.4.17", default-features = false }
regex.workspace = true
reqwest = { version = "0.11", features = ["blocking", "json"] }
reqwest-middleware = { version = "0.2.4", default-features = false }
reqwest-retry = { version = "0.3.0", default-features = false }
reqwest-tracing = { version = "0.4.7", default-features = false, optional = true }
serde.workspace = true
serde_json.workspace = true
sha3.workspace = true
thiserror.workspace = true
tokio = { version = "1.21.2", default-features = false, features = ["fs", "macros", "sync"] }
tracing = { version = "0.1.44", default-features = false, features = ["attributes", "std"], optional = true }
url = { version = "2.4.1", default-features = false }
uuid.workspace = true

[dev-dependencies]
edr_test_utils.workspace = true
tempfile = { version = "3.7.1", default-features = false }
walkdir = { version = "2.3.3", default-features = false }

[features]
test-remote = []
tracing = ["dep:tracing", "dep:reqwest-tracing"]

[lints]
workspace = true
