[package]
name = "edr_rpc_eth"
version.workspace = true
edition.workspace = true

[dependencies]
alloy-eips.workspace = true
alloy-serde = { workspace = true, features = ["std"] }
derive-where.workspace = true
edr_eip2930.workspace = true
edr_eip7702.workspace = true
edr_eth = { version = "0.3.5", path = "../edr_eth", features = ["serde"] }
edr_evm_spec.workspace = true
edr_rpc_client = { version = "0.3.5", path = "../edr_rpc_client" }
futures = { version = "0.3.28", default-features = false, features = ["std"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
log = { version = "0.4.17", default-features = false }
serde = { workspace = true, features = ["derive", "std"] }
thiserror.workspace = true
tokio = { version = "1.21.2", default-features = false, features = ["macros"] }
tracing = { version = "0.1.37", default-features = false, features = ["attributes", "std"], optional = true }

[dev-dependencies]
anyhow = { workspace = true, features = ["std"] }
assert-json-diff = "2.0.2"
edr_evm = { version = "0.3.5", path = "../edr_evm" }
edr_test_utils = { version = "0.3.5", path = "../edr_test_utils" }
mockito = { version = "1.0.2", default-features = false }
paste = { version = "1.0.14", default-features = false }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json"] }
serde_json.workspace = true
tempfile = { version = "3.7.1", default-features = false }
walkdir = { version = "2.3.3", default-features = false }

[features]
test-utils = []
test-remote = []
tracing = ["dep:tracing", "edr_rpc_client/tracing"]

[lints]
workspace = true
