[package]
name = "edr_rpc_eth"
version.workspace = true
edition.workspace = true

[dependencies]
alloy-eips.workspace = true
alloy-serde = { workspace = true, features = ["std"] }
alloy-rpc-types = { workspace = true, features = ["eth"] }
derive-where.workspace = true
edr_chain_spec.workspace = true
edr_chain_spec_rpc.workspace = true
edr_eth.workspace = true
edr_primitives.workspace = true
edr_eip2930.workspace = true
edr_eip7702.workspace = true
edr_receipt.workspace = true
edr_rpc_client.workspace = true
edr_signer.workspace = true
edr_state_api.workspace = true
edr_transaction.workspace = true
edr_utils.workspace = true
futures = { version = "0.3.28", default-features = false, features = ["std"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
log = { version = "0.4.17", default-features = false }
serde = { workspace = true, features = ["derive", "std"] }
thiserror.workspace = true
tokio = { version = "1.21.2", default-features = false, features = ["macros"] }
tracing = { version = "0.1.37", default-features = false, features = ["attributes", "std"], optional = true }

[dev-dependencies]
anyhow = { workspace = true, features = ["std"] }
assert-json-diff = "2.0.2"
edr_chain_l1.workspace = true
edr_test_utils.workspace = true
mockito = { version = "1.0.2", default-features = false }
paste = { version = "1.0.14", default-features = false }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json"] }
serde_json.workspace = true
tempfile = { version = "3.7.1", default-features = false }
walkdir = { version = "2.3.3", default-features = false }

[features]
test-remote = []
tracing = ["dep:tracing", "edr_rpc_client/tracing"]

[lints]
workspace = true
