[package]
name = "edr_runtime"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true, optional = true }
alloy-eips.workspace = true
alloy-rlp.workspace = true
auto_impl.workspace = true
derive-where.workspace = true
dyn-clone.workspace = true
edr_block_api.workspace = true
edr_block_builder_api.workspace = true
edr_block_header.workspace = true
edr_block_remote = { workspace = true, optional = true}
edr_block_storage.workspace = true
edr_blockchain_api.workspace = true
edr_blockchain_fork = { workspace = true, optional = true }
edr_chain_l1.workspace = true
edr_chain_spec.workspace = true
edr_chain_spec_block.workspace = true
edr_database_components.workspace = true
edr_defaults.workspace = true
edr_eip1559.workspace = true
edr_eth = { workspace = true, features = ["serde"] }
edr_evm_spec.workspace = true
edr_primitives.workspace = true
edr_receipt.workspace = true
edr_rpc_eth.workspace = true
edr_rpc_spec.workspace = true
edr_transaction.workspace = true
edr_trie.workspace = true
edr_signer.workspace = true
edr_state_api.workspace = true
edr_state_fork.workspace = true
edr_state_persistent_trie.workspace = true
edr_utils.workspace = true
futures = { version = "0.3.28", features = ["alloc", "async-await", "executor", "std"] }
indexmap = { version = "2.0.0", default-features = false, features = ["std"] }
itertools = { version = "0.11.0", default-features = false, features = ["use_alloc", "use_std"] }
log = { version = "0.4.17", default-features = false }
once_cell = { version = "1.19.0", default-features = false, features = ["alloc", "race", "std"] }
parking_lot.workspace = true
revm-handler.workspace = true
revm-inspector.workspace = true
revm-interpreter.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { version = "1.21.2", default-features = false, features = ["macros", "rt-multi-thread", "sync"] }
tracing = { version = "0.1.37", features = ["attributes", "std"], optional = true }

[dev-dependencies]
anyhow.workspace = true
criterion = { version = "0.4.0", default-features = false, features = ["cargo_bench_support", "html_reports", "plotters"] }
edr_chain_spec_provider.workspace = true
edr_generic.workspace = true
edr_provider.workspace = true
edr_test_transaction.workspace = true
edr_test_utils.workspace = true
lazy_static = "1.4.0"
paste = { version = "1.0.14", default-features = false }
serial_test = "2.0.0"
tempfile.workspace = true

[features]
test-remote = []
test-utils = ["dep:anyhow", "dep:edr_block_remote", "dep:edr_blockchain_fork"]
tracing = [
    "dep:tracing",
    "edr_block_builder_api/tracing",
    "edr_block_storage/tracing",
    "edr_blockchain_api/tracing",
    "edr_chain_l1/tracing",
    "edr_chain_spec_block/tracing",
    "edr_database_components/tracing",
    "edr_evm_spec/tracing",
    "edr_state_fork/tracing",
    "edr_state_persistent_trie/tracing"
]

[lints]
workspace = true
