[package]
name = "edr_scenarios"
version.workspace = true
edition.workspace = true

[dependencies]
alloy-serde = { workspace = true, features = ["std"] }
anyhow = { workspace = true, features = ["std"] }
chrono = { version = "0.4.41", default-features = false, features = ["serde"] }
edr_defaults = { path = "../edr_defaults" }
edr_eth = { version = "0.3.5", path = "../edr_eth" }
edr_evm = { version = "0.3.5", path = "../edr_evm", features = ["tracing"] }
edr_napi_core = { path = "../edr_napi_core" }
edr_provider = { version = "0.3.5", path = "../edr_provider", features = ["test-utils"] }
edr_test_utils = { version = "0.3.5", path = "../edr_test_utils" }
k256 = { version = "0.13.1", default-features = false, features = ["arithmetic", "ecdsa", "pem", "pkcs8", "precomputed-tables", "std"] }
serde = { workspace = true, features = ["derive"] }

[lints]
workspace = true
