[package]
name = "edr_scenarios"
version.workspace = true
edition.workspace = true

[dependencies]
alloy-serde = { workspace = true, features = ["std"] }
anyhow = { workspace = true, features = ["std"] }
chrono = { version = "0.4.41", default-features = false, features = ["serde"] }
edr_defaults = { path = "../edr_defaults" }
edr_eth.workspace = true
edr_evm = { workspace = true, features = ["tracing"] }
edr_napi_core.workspace = true
edr_provider = { workspace = true, features = ["test-utils"] }
edr_test_utils.workspace = true
k256 = { version = "0.13.1", default-features = false, features = ["arithmetic", "ecdsa", "pem", "pkcs8", "precomputed-tables", "std"] }
serde = { workspace = true, features = ["derive"] }

[lints]
workspace = true
