[package]
name = "edr_signer"
version.workspace = true
edition.workspace = true

[dependencies]
alloy-primitives.workspace = true
alloy-rlp.workspace = true
edr_primitives.workspace = true
hex = { version = "0.4.3", default-features = false, features = ["alloc", "std"] }
k256 = { version = "0.13.1", default-features = false, features = ["arithmetic", "ecdsa", "pkcs8", "precomputed-tables", "std"] }
serde.workspace = true
sha3.workspace = true
thiserror.workspace = true

[dev-dependencies]
edr_test_utils.workspace = true

[lints]
workspace = true
