[package]
name = "edr_solidity"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
alloy-dyn-abi.workspace = true
alloy-json-abi.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
derive-where.workspace = true
edr_chain_spec.workspace = true
edr_eth.workspace = true
edr_evm_spec.workspace = true
edr_primitives.workspace = true
edr_runtime.workspace = true
foundry-compilers.workspace = true
indexmap = { version = "2", features = ["serde"] }
log = { version = "0.4.17", default-features = false }
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
strum = { version = "0.26.0", features = ["derive"] }
semver = { workspace = true, features = ["std"] }
thiserror.workspace = true
itertools = "0.10.5"

[dev-dependencies]
criterion = "0.5"

[features]
tracing = ["edr_evm_spec/tracing", "edr_runtime/tracing"]

[[bench]]
name = "contracts_identifier"
harness = false

[lints]
workspace = true
