[package]
name = "edr_solidity"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
alloy-dyn-abi.workspace = true
alloy-json-abi.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
derive-where.workspace = true
edr_artifact.workspace = true
edr_chain_spec.workspace = true
edr_chain_spec_evm.workspace = true
edr_common.workspace = true
edr_decoder_revert.workspace = true
edr_defaults.workspace = true
edr_eth.workspace = true
edr_primitives.workspace = true
edr_tracing.workspace = true
foundry-compilers.workspace = true
foundry-evm-traces.workspace = true
indexmap = { version = "2", features = ["serde"] }
log = { version = "0.4.17", default-features = false }
parking_lot.workspace = true
revm-bytecode.workspace = true
revm-interpreter.workspace = true
revm-inspector.workspace = true
revm-inspectors.workspace = true
revm-precompile.workspace = true
serde.workspace = true
serde_json.workspace = true
strum = { version = "0.27.1", features = ["derive"] }
semver = { workspace = true, features = ["std"] }
thiserror.workspace = true
itertools = "0.14.0"

[dev-dependencies]
criterion = "0.5"

[features]
tracing = ["edr_chain_spec_evm/tracing"]

[[bench]]
name = "contracts_identifier"
harness = false

[lints]
workspace = true
