[package]
name = "edr_solidity_tests"

version.workspace = true
edition.workspace = true

[dependencies]
edr_chain_spec.workspace = true
edr_common.workspace = true
edr_coverage.workspace = true
edr_defaults.workspace = true
edr_gas_report.workspace = true
edr_primitives.workspace = true
edr_runtime.workspace = true
edr_solidity.workspace = true

foundry-cheatcodes.workspace = true
foundry-compilers = { workspace = true }
foundry-evm.workspace = true

comfy-table = "7"
derive_more.workspace = true
derive-where.workspace = true
dunce.workspace = true
eyre.workspace = true
futures = "0.3"
num_cpus = "1.16.0"
proptest = "1"
rayon = "1"
regex = "1"
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
yansi.workspace = true
humantime-serde = "1.1.1"

alloy-dyn-abi.workspace = true
alloy-json-abi.workspace = true
alloy-primitives = { workspace = true, features = ["serde"] }

tokio = { workspace = true, features = ["time"] }
evm-disassembler.workspace = true
thiserror = "1.0.61"
log = "0.4.22"

[dev-dependencies]
edr_chain_l1.workspace = true
edr_test_utils.workspace = true
futures = "0.3"
itertools.workspace = true
once_cell = "1"
paste = "1.0"
semver = "1"
serial_test = "2.0.0"
tempfile.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }

[features]
test-remote = []
tracing = ["edr_coverage/tracing", "edr_gas_report/tracing", "edr_runtime/tracing", "edr_solidity/tracing"]

[lints]
workspace = true
