[package]
name = "edr_solidity_tests"

version.workspace = true
edition.workspace = true

[dependencies]
edr_artifact.workspace = true
edr_chain_spec.workspace = true
edr_common.workspace = true
edr_coverage.workspace = true
edr_decoder_revert.workspace = true
edr_defaults.workspace = true
edr_gas_report.workspace = true
edr_primitives.workspace = true
edr_solidity.workspace = true
edr_utils_sync.workspace = true

foundry-cheatcodes.workspace = true
foundry-compilers = { workspace = true }
foundry-evm.workspace = true

derive_more.workspace = true
derive-where.workspace = true
dunce.workspace = true
eyre.workspace = true
futures = "0.3"
itertools.workspace = true
proptest.workspace = true
rayon = "1"
regex.workspace = true
serde.workspace = true
tracing.workspace = true
yansi.workspace = true
humantime-serde = "1.1.1"

alloy-dyn-abi.workspace = true
alloy-json-abi.workspace = true
crossbeam-channel = "0.5"
alloy-primitives = { workspace = true, features = ["map-hashbrown", "serde"] }

semver = { workspace = true, features = ["std"] }
slang_solidity_v2 = { git = "https://github.com/NomicFoundation/slang", rev = "84c5a027c143374d2f5c6cf492c771711f38db6c" }
tokio = { workspace = true, features = ["time"] }
thiserror = "2.0.12"

[dev-dependencies]
edr_chain_l1.workspace = true
edr_test_utils.workspace = true
futures = "0.3"
itertools.workspace = true
num-traits = "0.2.19"
once_cell = "1"
parking_lot.workspace = true
paste = "1.0"
serde_json.workspace = true
semver.workspace = true
serial_test = "2.0.0"
tempfile.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }

[features]
test-remote = []
tracing = ["edr_gas_report/tracing", "edr_solidity/tracing"]

[lints]
workspace = true
